// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`processor-service processes ADT_A01 message and returns correct Bundle 1`] = `
{
  "entry": [
    {
      "request": {
        "method": "PUT",
        "url": "/Patient/P12345",
      },
      "resource": {
        "address": [
          {
            "city": "Testcity",
            "country": "USA",
            "line": [
              "100 Test St",
            ],
            "postalCode": "00001",
            "state": "TS",
          },
        ],
        "birthDate": "2000-01-01",
        "gender": "male",
        "id": "P12345",
        "identifier": [
          {
            "system": "HOSPITAL",
            "type": {
              "coding": [
                {
                  "code": "MR",
                },
              ],
            },
            "value": "P12345",
          },
        ],
        "maritalStatus": {
          "coding": [
            {
              "code": "M",
            },
          ],
        },
        "meta": {
          "tag": [
            {
              "code": "MSG001",
              "system": "urn:aidbox:hl7v2:message-id",
            },
            {
              "code": "ADT_A01",
              "system": "urn:aidbox:hl7v2:message-type",
            },
            {
              "code": "hospital",
              "system": "urn:aidbox:hl7v2:sender",
            },
          ],
        },
        "name": [
          {
            "family": "TESTPATIENT",
            "given": [
              "ALPHA",
              "A",
            ],
            "text": "ALPHA A TESTPATIENT",
          },
        ],
        "resourceType": "Patient",
        "telecom": [
          {
            "extension": [
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-country",
                "valueString": "1",
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-area",
                "valueString": "555",
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-local",
                "valueString": "0000001",
              },
            ],
            "system": "phone",
            "use": "home",
            "value": "+1 555 0000001",
          },
          {
            "extension": [
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-country",
                "valueString": "1",
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-area",
                "valueString": "555",
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-local",
                "valueString": "0000002",
              },
            ],
            "system": "phone",
            "use": "work",
            "value": "+1 555 0000002",
          },
        ],
      },
    },
    {
      "request": {
        "method": "PUT",
        "url": "/Encounter/VN001",
      },
      "resource": {
        "class": {
          "code": "IMP",
          "display": "inpatient encounter",
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode",
        },
        "hospitalization": {
          "admitSource": {
            "coding": [
              {
                "code": "ADM",
              },
            ],
          },
        },
        "id": "VN001",
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "VN",
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203",
                },
              ],
              "text": "visit number",
            },
            "value": "VN001",
          },
        ],
        "location": [
          {
            "location": {
              "display": "BED1",
            },
            "status": "active",
          },
        ],
        "participant": [
          {
            "individual": {
              "display": "PROVIDER TEST",
              "identifier": {
                "value": "PROV001",
              },
            },
            "type": [
              {
                "coding": [
                  {
                    "code": "ATND",
                    "display": "attender",
                    "system": "http://terminology.hl7.org/CodeSystem/v3-ParticipationType",
                  },
                ],
                "text": "attender",
              },
            ],
          },
        ],
        "resourceType": "Encounter",
        "serviceType": {
          "coding": [
            {
              "code": "MED",
            },
          ],
        },
        "status": "in-progress",
        "subject": {
          "reference": "Patient/P12345",
        },
      },
    },
  ],
  "resourceType": "Bundle",
  "type": "transaction",
}
`;

exports[`processor-service processes ADT_A01 message and returns correct Bundle 2`] = `
{
  "bundle": 
"{
  "resourceType": "Bundle",
  "type": "transaction",
  "entry": [
    {
      "resource": {
        "resourceType": "Patient",
        "identifier": [
          {
            "value": "P12345",
            "system": "HOSPITAL",
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            }
          }
        ],
        "name": [
          {
            "family": "TESTPATIENT",
            "given": [
              "ALPHA",
              "A"
            ],
            "text": "ALPHA A TESTPATIENT"
          }
        ],
        "birthDate": "2000-01-01",
        "gender": "male",
        "address": [
          {
            "line": [
              "100 Test St"
            ],
            "city": "Testcity",
            "state": "TS",
            "postalCode": "00001",
            "country": "USA"
          }
        ],
        "telecom": [
          {
            "system": "phone",
            "value": "+1 555 0000001",
            "use": "home",
            "extension": [
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-country",
                "valueString": "1"
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-area",
                "valueString": "555"
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-local",
                "valueString": "0000001"
              }
            ]
          },
          {
            "system": "phone",
            "value": "+1 555 0000002",
            "use": "work",
            "extension": [
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-country",
                "valueString": "1"
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-area",
                "valueString": "555"
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-local",
                "valueString": "0000002"
              }
            ]
          }
        ],
        "maritalStatus": {
          "coding": [
            {
              "code": "M"
            }
          ]
        },
        "id": "P12345",
        "meta": {
          "tag": [
            {
              "code": "MSG001",
              "system": "urn:aidbox:hl7v2:message-id"
            },
            {
              "code": "ADT_A01",
              "system": "urn:aidbox:hl7v2:message-type"
            },
            {
              "code": "hospital",
              "system": "urn:aidbox:hl7v2:sender"
            }
          ]
        }
      },
      "request": {
        "method": "PUT",
        "url": "/Patient/P12345"
      }
    },
    {
      "resource": {
        "resourceType": "Encounter",
        "class": {
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode",
          "code": "IMP",
          "display": "inpatient encounter"
        },
        "status": "in-progress",
        "identifier": [
          {
            "value": "VN001",
            "type": {
              "coding": [
                {
                  "system": "http://terminology.hl7.org/CodeSystem/v2-0203",
                  "code": "VN"
                }
              ],
              "text": "visit number"
            }
          }
        ],
        "serviceType": {
          "coding": [
            {
              "code": "MED"
            }
          ]
        },
        "participant": [
          {
            "type": [
              {
                "coding": [
                  {
                    "system": "http://terminology.hl7.org/CodeSystem/v3-ParticipationType",
                    "code": "ATND",
                    "display": "attender"
                  }
                ],
                "text": "attender"
              }
            ],
            "individual": {
              "display": "PROVIDER TEST",
              "identifier": {
                "value": "PROV001"
              }
            }
          }
        ],
        "location": [
          {
            "location": {
              "display": "BED1"
            },
            "status": "active"
          }
        ],
        "hospitalization": {
          "admitSource": {
            "coding": [
              {
                "code": "ADM"
              }
            ]
          }
        },
        "subject": {
          "reference": "Patient/P12345"
        },
        "id": "VN001"
      },
      "request": {
        "method": "PUT",
        "url": "/Encounter/VN001"
      }
    }
  ]
}"
,
  "id": "test-msg-001",
  "message": 
"MSH|^~\\&|SENDER|FACILITY|RECEIVER|DEST|20231215143000||ADT^A01^ADT_A01|MSG001|P|2.5.1|||AL|AL
EVN|A01|20231215143000|||OPERATOR
PID|1||P12345^^^HOSPITAL^MR||TESTPATIENT^ALPHA^A||20000101|M|||100 Test St^^Testcity^TS^00001^USA||^PRN^PH^^1^555^0000001|^WPN^PH^^1^555^0000002||M||P12345
PV1|1|I|WARD1^ROOM1^BED1||||PROV001^TEST^PROVIDER|||MED||||ADM|||||VN001|||||||||||||||||||||||||||20231215140000"
,
  "patient": {
    "reference": "Patient/P12345",
  },
  "resourceType": "IncomingHL7v2Message",
  "status": "processed",
  "type": "ADT_A01",
}
`;

exports[`processor-service processes ADT_A08 message and returns correct Bundle 1`] = `
{
  "entry": [
    {
      "request": {
        "method": "PUT",
        "url": "/Patient/P67890",
      },
      "resource": {
        "address": [
          {
            "city": "Testtown",
            "country": "USA",
            "line": [
              "200 Test Ave",
            ],
            "postalCode": "00002",
            "state": "TS",
          },
        ],
        "birthDate": "2000-02-02",
        "communication": [
          {
            "language": {
              "coding": [
                {
                  "code": "S",
                },
              ],
            },
            "preferred": true,
          },
        ],
        "extension": [
          {
            "url": "http://hl7.org/fhir/StructureDefinition/patient-religion",
            "valueCodeableConcept": {
              "coding": [
                {
                  "code": "P67890",
                },
              ],
            },
          },
        ],
        "gender": "female",
        "id": "P67890",
        "identifier": [
          {
            "system": "HOSPITAL",
            "type": {
              "coding": [
                {
                  "code": "MR",
                },
              ],
            },
            "value": "P67890",
          },
        ],
        "meta": {
          "tag": [
            {
              "code": "MSG002",
              "system": "urn:aidbox:hl7v2:message-id",
            },
            {
              "code": "ADT_A08",
              "system": "urn:aidbox:hl7v2:message-type",
            },
            {
              "code": "hospital",
              "system": "urn:aidbox:hl7v2:sender",
            },
          ],
        },
        "name": [
          {
            "family": "TESTPATIENT",
            "given": [
              "BETA",
              "B",
            ],
            "text": "BETA B TESTPATIENT",
          },
        ],
        "resourceType": "Patient",
        "telecom": [
          {
            "extension": [
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-country",
                "valueString": "1",
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-area",
                "valueString": "555",
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-local",
                "valueString": "0000003",
              },
            ],
            "system": "phone",
            "use": "home",
            "value": "+1 555 0000003",
          },
        ],
      },
    },
  ],
  "resourceType": "Bundle",
  "type": "transaction",
}
`;

exports[`processor-service processes ADT_A08 message and returns correct Bundle 2`] = `
{
  "bundle": 
"{
  "resourceType": "Bundle",
  "type": "transaction",
  "entry": [
    {
      "resource": {
        "resourceType": "Patient",
        "identifier": [
          {
            "value": "P67890",
            "system": "HOSPITAL",
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            }
          }
        ],
        "name": [
          {
            "family": "TESTPATIENT",
            "given": [
              "BETA",
              "B"
            ],
            "text": "BETA B TESTPATIENT"
          }
        ],
        "birthDate": "2000-02-02",
        "gender": "female",
        "address": [
          {
            "line": [
              "200 Test Ave"
            ],
            "city": "Testtown",
            "state": "TS",
            "postalCode": "00002",
            "country": "USA"
          }
        ],
        "telecom": [
          {
            "system": "phone",
            "value": "+1 555 0000003",
            "use": "home",
            "extension": [
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-country",
                "valueString": "1"
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-area",
                "valueString": "555"
              },
              {
                "url": "http://hl7.org/fhir/StructureDefinition/contactpoint-local",
                "valueString": "0000003"
              }
            ]
          }
        ],
        "communication": [
          {
            "language": {
              "coding": [
                {
                  "code": "S"
                }
              ]
            },
            "preferred": true
          }
        ],
        "extension": [
          {
            "url": "http://hl7.org/fhir/StructureDefinition/patient-religion",
            "valueCodeableConcept": {
              "coding": [
                {
                  "code": "P67890"
                }
              ]
            }
          }
        ],
        "id": "P67890",
        "meta": {
          "tag": [
            {
              "code": "MSG002",
              "system": "urn:aidbox:hl7v2:message-id"
            },
            {
              "code": "ADT_A08",
              "system": "urn:aidbox:hl7v2:message-type"
            },
            {
              "code": "hospital",
              "system": "urn:aidbox:hl7v2:sender"
            }
          ]
        }
      },
      "request": {
        "method": "PUT",
        "url": "/Patient/P67890"
      }
    }
  ]
}"
,
  "id": "test-msg-002",
  "message": 
"MSH|^~\\&|SENDER|FACILITY|RECEIVER|DEST|20231215143000||ADT^A08^ADT_A08|MSG002|P|2.5.1|||AL|AL
EVN|A08|20231215143000|||OPERATOR
PID|1||P67890^^^HOSPITAL^MR||TESTPATIENT^BETA^B||20000202|F|||200 Test Ave^^Testtown^TS^00002^USA||^PRN^PH^^1^555^0000003||S||P67890"
,
  "patient": {
    "reference": "Patient/P67890",
  },
  "resourceType": "IncomingHL7v2Message",
  "status": "processed",
  "type": "ADT_A08",
}
`;

exports[`processor-service returns false when no messages to process 1`] = `null`;

exports[`processor-service returns false when no messages to process 2`] = `null`;

exports[`processor-service handles conversion errors and updates status to error 1`] = `
{
  "bundle": undefined,
  "error": "HL7v2 message must start with MSH segment",
  "id": "test-msg-003",
  "message": "INVALID|MESSAGE",
  "resourceType": "IncomingHL7v2Message",
  "status": "error",
  "type": "ADT_A01",
}
`;
